# verity

./: .gitignore  Implementation_Plan.md  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9435fc59e010_add_session_tables.py  d180d47ca59d_change_user_id_to_uuid.py  da2fca0d16e3_add_chat_and_chunks.py
backend/app/: main.py
backend/app/api/: auth.py  sessions.py
backend/app/core/: config.py  dependencies.py  llm.py
backend/app/database/: connection.py
backend/app/graph/: nodes.py  state.py  workflow.py
backend/app/models/: __init__.py  chat.py  session.py
backend/app/schemas/: auth.py  chat.py  session.py
backend/app/services/: chat_service.py  embedding_service.py  evaluator_service.py  extraction_service.py  planner_service.py  report_service.py  retrieval_service.py  search_service.py  sufficiency_service.py  summarization_service.py
backend/tests/: test_chat.py  test_services.py  test_workflow.py
frontend/: package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/signup/: page.tsx
frontend/app/auth/callback/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/sessions/[id]/: page.tsx
frontend/components/: AppHeader.tsx  AppLayout.tsx  ChatInterface.tsx  NewResearchDialog.tsx  ProgressStepper.tsx  ReportViewer.tsx  SourceCard.tsx
frontend/lib/: api.ts
frontend/types/: index.ts
