[project]
name = "backend"
version = "0.1.0"
description = "Backend API for Verity, an AI research assistant"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.50",
    "supabase>=2.30.1",
    "uvicorn>=0.48.0",
]
