[project]
name = "backend"
version = "0.1.0"
description = "Backend API for Verity, an AI research assistant"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.4",
    "langchain-mistralai>=1.1.4",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.4",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.50",
    "supabase>=2.30.1",
    "tavily-python>=0.7.25",
    "uvicorn>=0.48.0",
]
